2002-08-08  Seth Nickell  <snickell@stanford.edu>

	* capplets/Makefile.am:

	Actually hook the windows capplet into the build. Though
	its sort of ass right now.

2002-08-08  Seth Nickell <snickell@stanford.edu>

	Try my best to throw a monkey wrench in things. Checkin
	Windows capplet, and add window related settings to
	the font capplet and theme capplet.

	Also fix button alignments on all capplets.

2002-07-27  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: add check for gtk+ with multihead
	support and define HAVE_GTK_MULTIHEAD if found.

2002-07-24  jacob berkman  <jacob@ximian.com>

	* configure.in: only #define HAVE_XFT2 if we actually have xft2

	* configure.in: fixup x11 checks when x11 include path is not in
	the default include path for the compiler

Tue Jul 23 23:31:17 2002  Owen Taylor  <otaylor@redhat.com>

	* capplets/font/main.c: Fix stupid typo.

Tue Jul 23 23:29:51 2002  Owen Taylor  <otaylor@redhat.com>

	* capplets/fonts/subpixel-{rgb,bgr,vrgb,vbgr}.c: Add
	some pixmaps for font rendering.

Tue Jul 23 22:35:10 2002  Owen Taylor  <otaylor@redhat.com>

	* acconfig.h configure.in: Check for Xft2.

	* capplets/font/main.c capplets/font/Makefile.am
	capplets/font/font-properties.glade: If XFt2 is present, 
	allow the user to control various font rendering attributes.

	* gnome-settings-daemon/gnome-settings-xsettings.c:
	Mirror the Xft rendering attributes from the font
	capplet to XSETTINGS and Xrdb.

	* schemas/Makefile.am schemas/desktop_gnome_font_rendering.schemas:
	Add schemas for the new GConf settings.

Tue Jul 23 22:06:08 2002  Owen Taylor  <otaylor@redhat.com>

	* capplets/keyboard/gnome-keyboard-properties.c: Fix 
	unterminated GConfEnumStringPair array.

	* gnome-settings-daemon/gnome-settings-default-editor.c:
	Fix some comments that had embedded /* which was causing
	GCC warnings.

2002-07-10  Jody Goldberg <jody@gnome.org>
	patch from Brian Cameron

	* configure.in : look for path to esound
