@@ -1,3 +1,8 @@
+2002-08-09  Yanko Kaneti <yaneti@declera.com>
+
+	* capplets/common/capplet-util.h: handle different cases of
+	preprocessor macro varargs support.
+
 2002-08-08  Seth Nickell  <snickell@stanford.edu>
 
 	* capplets/Makefile.am:
